riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_sync_function_returning_optional.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
fun findUser(id: Int): String? {
    val buf = Native.riff_find_user(id)
        ?: throw FfiException(-1, "Null buffer returned")
    val reader = WireReader(buf)
    return reader.readOption { it.readString() }
}
