riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_sync_function_returning_primitive.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
fun add(a: Int, b: Int): Int {
    return Native.riff_add(a, b)
}
